--- a/client/styles/base.css
+++ b/client/styles/base.css
@@ -47,7 +47,7 @@ html, body {
 html {
     overflow-y:  scroll;
     overflow-x:  hidden;
-    font-family: Verdana, 'Bitstream Vera Sans', 'Bitstream Vera Sans Webfont', 'DejaVu Sans', sans-serif;
+    font-family: 'Bitstream Vera Sans Webfont', 'DejaVu Sans', sans-serif;
     font-size:   15px;
     
     /* Improve the text rendering and enable support for ligatures and kerning in Mozilla. */
@@ -61,7 +61,7 @@ input, .callout, .lang {
     /*      If a font-family is not specified, it will use a system default. */
     /*      On Windows, that font is "MS Shell Dlg," which is actually "Microsoft Sans Serif." */
     /*TODO: Make/find a good replacement font for Arial. */
-    font-family: Arial, 'Bitstream Vera Sans', 'Bitstream Vera Sans Webfont', 'DejaVu Sans', sans-serif;
+    font-family: Arial, 'Bitstream Vera Sans Webfont', 'DejaVu Sans', sans-serif;
 }
 
 body {
@@ -705,14 +705,14 @@ label {
 }
 
 .lex-orig_word, .hebrew_title {
-    font-family: 'Ezra SIL SR', 'BFHebrew', 'Palatino Linotype', Palatino, TexGyrePagella, 'TeX Gyre Pagella', 'URWPalladioL', 'Book Antiqua', 'Times new Roman', Times, serif;
+    font-family: 'BF_Hebrew', 'Palatino Linotype', Palatino, TexGyrePagella, 'TeX Gyre Pagella', 'URWPalladioL', 'Book Antiqua', 'Times new Roman', Times, serif;
     font-size: 30px;
     /* The vertical alignment is required simply to match up with .lex-pronun. */
     vertical-align: super;
 }
 
 .lex-pronun {
-    font-family: Verdana, 'Bitstream Vera Sans', 'Bitstream Vera Sans Webfont', 'DejaVu Sans', sans-serif;
+    font-family: 'Bitstream Vera Sans Webfont', 'DejaVu Sans', sans-serif;
     font-size: 14px;
     white-space: nowrap;
     /* Because this element can wrap if the word is long and the line height is rather large due to the large original word one the line above, */
@@ -1003,7 +1003,7 @@ h2 {
        -moz-font-feature-settings: "dlig" 1, "ss01" 1, "liga", "clig", "hlig";
     /* This is just to be future comaptible since browsers do not currently use this. */
             font-feature-settings: "dlig" 1, "ss01" 1, "liga", "clig", "hlig";
-    font-family: 'IM Fell DW Pica', 'Palatino Linotype', Palatino, TexGyrePagella, 'TeX Gyre Pagella', 'URWPalladioL', 'Book Antiqua', 'Times new Roman', Times, serif!important;
+    font-family: 'BF_IM_FELL', 'Palatino Linotype', Palatino, TexGyrePagella, 'TeX Gyre Pagella', 'URWPalladioL', 'Book Antiqua', 'Times new Roman', Times, serif!important;
 }
 
 .lang_en_em, .lang_en_em .d {
@@ -1142,18 +1142,18 @@ h2 {
 }
 
 @font-face {
-    font-family: 'BFHebrew';
+    font-family: 'BF_Hebrew';
     src: local('Ezra SIL SR'),
          url('/fonts/BFHebrew.woff') format('woff');
 }
 
 @font-face {
-    font-family: 'IM Fell DW Pica';
+    font-family: 'BF_IM_FELL';
     src: local('IM Fell DW Pica'),
          url('/fonts/imfepirm28p.woff') format('woff');
 }
 @font-face {
-    font-family: 'IM Fell DW Pica';
+    font-family: 'BF_IM_FELL';
     src: local('IM Fell DW Pica'),
          url('/fonts/imfepiit28p.woff') format('woff');
     font-style: italic;
