--- a/client/styles/base.css
+++ b/client/styles/base.css
@@ -1160,12 +1160,12 @@ h2 {
     font-style: italic;
 }
 
-/***********************/
-/* WebKit specific CSS */
-/***********************/
+/*******************************/
+/* WebKit & Opera specific CSS */
+/*******************************/
 
 /* Make the drop caps aligned with the second line of text. */
-.webkit .first_verse:first-letter, .webkit .first_paragraph:first-letter {
+.webkit .first_verse:first-letter, .webkit .first_paragraph:first-letter, .opera .first_verse:first-letter, .opera .first_paragraph:first-letter {
     margin-bottom: 0;
     margin-top:    9px;
     padding: 1px;
@@ -1174,13 +1174,6 @@ h2 {
 /**********************/
 /* Opera specific CSS */
 /**********************/
-
-/* Make the drop caps take up two lines, so that wrapping text is not placed over it.  (See John 4:1.) */
-.opera .first_verse:first-letter, .opera .first_paragraph:first-letter {
-    margin-bottom: 0;
-    margin-top:    13px;
-    padding: 1px;
-}
 
 /* Remove extra padding on buttons (this emulates button clicks similar to other browsers). */
 .opera button:active {
