Removed some unnecessary Opera specific CSS.

--- a/client/styles/base.css
+++ b/client/styles/base.css
@@ -1171,14 +1171,9 @@ h2 {
     padding: 1px;
 }
 
-/**********************/
-/* Opera specific CSS */
-/**********************/
-
-/* Remove extra padding on buttons (this emulates button clicks similar to other browsers). */
-.opera button:active {
-    padding: 5px 14px;
-}
+/***************************/
+/* Just Opera specific CSS */
+/***************************/
 
 /* Because Opera raises these elements regardless of whether they are on the same line or not, the alignment must be reverted, */
 /* and thereby causing the .lex-pronun element to be improperly aligned if it wraps. */
