--- a/client/styles/base.css
+++ b/client/styles/base.css
@@ -1196,13 +1196,23 @@ h2 {
 /* Make the drop caps aligned with the second line of text. */
 .webkit .first_verse:first-letter, .webkit .first_paragraph:first-letter, .opera .first_verse:first-letter, .opera .first_paragraph:first-letter {
     margin-bottom: 0;
-    margin-top:    9px;
+    margin-top:    5px;
     padding: 1px;
+}
+
+.webkit .lang_en_em .first_verse:first-letter, .webkit .lang_en_em .first_paragraph:first-letter, .opera .lang_en_em .first_verse:first-letter, .opera .lang_en_em .first_paragraph:first-letter {
+    margin-top: 8px;
 }
 
 /***************************/
 /* Just Opera specific CSS */
 /***************************/
+
+.opera .first_verse:first-letter, .opera .first_paragraph:first-letter {
+    margin-bottom: 0;
+    margin-top:    13px;
+    padding: 1px;
+}
 
 /* Because Opera raises these elements regardless of whether they are on the same line or not, the alignment must be reverted, */
 /* and thereby causing the .lex-pronun element to be improperly aligned if it wraps. */
