--- a/client/styles/lang/en_em.css
+++ b/client/styles/lang/en_em.css
@@ -25,12 +25,12 @@
  * along with this program.  If not, see http://www.opensource.org/licenses/AGPL-3.0.
  */
 
-.lang_en_em .hebrew_title {
+.lang_en_em .psalm_119_heading {
     /* The original printing of the King James uses all caps for Psalm 119's stanza headings. */
     text-transform: uppercase;
 }
 
-.lang_en_em, .lang_en_em .verse_number, .lang_en_em .book, .lang_en_em .chapter, .lang_en_em .short_book, .lang_en_em .first_verse:first-letter, .lang_en_em .first_paragraph:first-letter, .lang_en_em .d, .lang_en_em .hebrew_title {
+.lang_en_em, .lang_en_em .verse_number, .lang_en_em .book, .lang_en_em .chapter, .lang_en_em .short_book, .lang_en_em .first_verse:first-letter, .lang_en_em .first_paragraph:first-letter, .lang_en_em .d, .lang_en_em .psalm_119_heading {
     /* Enable advanced OpenType typographic features. */
     /* dlig = Discretionary Ligatures (combine certain characters, e.g., "ct") */
     /* ss01 = Stylistic Set 1 (e.g., long s (ſ)) */
