Added some padding to Next and Previous links (non-JS mode) make it easier to click on (esp. for touch devices).

--- a/client/styles/base.css
+++ b/client/styles/base.css
@@ -1137,6 +1137,7 @@ h2 {
     text-decoration: none;
     color: #000;
     opacity: .5;
+    margin: 10px 0;
 }
 .static_link:hover {
     opacity: 1;
